# Pattern-Power

./: README.md  pattern-power.cabal
Data/: Pattern.hs
